[gd_scene load_steps=7 format=3 uid="uid://bbnm7kcpefgto"]

[ext_resource type="Script" path="res://scripts/Garrison/level_garrison.gd" id="1_qvm6f"]
[ext_resource type="Texture2D" uid="uid://crf8sgf7bs06h" path="res://images/Garrison/armory.jpg" id="2_l3fvq"]
[ext_resource type="FontFile" uid="uid://c1h4k12aq4c5u" path="res://fonts/SairaStencilOne-Regular.ttf" id="3_qk03g"]
[ext_resource type="Texture2D" uid="uid://2t62bdxf4rge" path="res://images/Andy/frame.png" id="4_bnm5d"]
[ext_resource type="Texture2D" uid="uid://c4gd04h5xwh6l" path="res://images/Andy/lantern.png" id="5_c1csf"]

[sub_resource type="LabelSettings" id="LabelSettings_frmj3"]
font = ExtResource("3_qk03g")
font_size = 42

[node name="Level3" type="Node2D"]
script = ExtResource("1_qvm6f")

[node name="Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 75.0
one_shot = true
autostart = true

[node name="Background" type="TextureRect" parent="."]
offset_left = -16.0
offset_top = -18.0
offset_right = 1172.0
offset_bottom = 662.0
texture = ExtResource("2_l3fvq")
expand_mode = 2

[node name="TimerLabel" type="Label" parent="."]
offset_left = 29.0
offset_top = 28.0
offset_right = 90.0
offset_bottom = 62.0
text = "1:30
"
label_settings = SubResource("LabelSettings_frmj3")

[node name="Frame" type="Sprite2D" parent="."]
position = Vector2(76.1249, 153)
scale = Vector2(0.0927501, 0.0731364)
texture = ExtResource("4_bnm5d")

[node name="TargetDisplay" type="TextureRect" parent="."]
offset_left = 42.1249
offset_top = 116.0
offset_right = 112.125
offset_bottom = 186.0
texture = ExtResource("5_c1csf")
expand_mode = 3
stretch_mode = 4

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
